2003-06-16  ------ omnetpp-2.3 released ------

2003-03-15  ------ omnetpp-2.3b2 released ------

2003-02-15  ------ omnetpp-2.3b1 released ------

2003-02-07  Andras Varga

	* MSVC .mak file replaced by Makefile.vc, generated by opp_nmakemake

2002-05-04  ------ omnetpp-2.2 released ------

2002-04-07  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* Makefile.in (NEDCFLAGS): fixed substitution

2001-09-01 Andras Varga

	* const-related fixes

2001-03-10  Andras Varga

	* ------ omnetpp-2.1 released ------

	* MSVC makefiles and project files now contain the OMNeT++ include
	and lib directories with absolute paths (previously they were
	relative paths, like ..\..\lib). This means the samples will
	compile even when they're moved to another location in the file
	system.

	* Borland C++ project file (*.ide) removed, Makefile.bc added
	(unsupported!)


2000-07-01  Andras Varga

	* ------ omnetpp-2.0p1 released ------

	* ------ omnetpp-2.0 released ------

	* calls to obsolete cQueue functions upgraded to new functions
	(insert(),pop())


2000-06-02  Andras Varga

	* ------ omnetpp-2.0b5 released ------

        * fix in MSVC makefile; warning eliminated in othermod.cc


2000-05-07  Andras Varga

	* ------ omnetpp-2.0b4 released ------

        * char * --> const char * changes

2000-03-12  Andras Varga

        * readme expanded with advice on PVM setup

2000-01-25  Andras Varga

	* ------ omnetpp-2.0b3 released ------

        * ssm_ifs.cc updated because of cArray interface change

1999-12-23  Andras Varga

        * BC3.1 support removed

        * rewritten msg->addPar( *new cPar(...)) lines (see change to cPar
	interface in the sim library)

        * minor cosmetics changes

1999-10-17  Andras Varga

        * Computer renamed to FDDIStation (clashed with Token's Computer
	when linking all sample simulations into one executable)

1999-10-10  Andras Varga

        * standardized indentation in ned files
