@@ -25,7 +25,7 @@ import
 
 // FDDIRing --
 //
-// A simple FDDI ring of identical FDDIStation nodes. The stations are 
+// A simple FDDI ring of identical FDDIStation nodes. The stations are
 // connected in the form of a ring, plus each of them is connected to the
 // stat module.
 //
@@ -64,8 +64,6 @@ endmodule
 // modelled with SAC-4.
 //
 module TUBNRing
-    machines:
-        host;
     parameters:
         LoadControlFile : string,
         FDDI_Generator_type : string,
@@ -77,46 +75,34 @@ module TUBNRing
         out: out;
     submodules:
         loadCtrl: LoadControl;
-            on:
-                host;
             parameters:
                 LoadControlFile = LoadControlFile;
             display: "p=50,50";
         bmecisco7: FDDI_Router_port; // in Building R, EIK
-            on:
-                host;
             parameters:
                 //      FDDI_Generator_type=FDDI_Generator_type,
                 StationID = 0,
                 address = "DECnet000728";
             display: "p=100,125;i=router";
         bmecisco1: FDDI_SAS; // in Building R, EIK
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 1,
                 address = "DECnet000A04";
             display: "p=150,50;i=router";
         bmecisco3: FDDI_SAS; // in Building R, EIK
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 2,
                 address = "cisco_F99030";
             display: "p=250,50;i=router";
         bmecisco2: FDDI_SAS; // in Building K
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 3,
                 address = "DECnet000B04";
             display: "p=350,50;i=router";
         bmeconc5: FDDI_SAC; // in Building K
-            on:
-                host;
             parameters:
                 StationID = -1,
                 address = "DEC___26AF0D";
@@ -125,16 +111,12 @@ module TUBNRing
                 M_out[1];
             display: "p=400,125;i=ipc";
         bmebr1: FDDI_SAS; // in Building CH
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 4,
                 address = "DEC___28E6AD";
             display: "p=430,70;i=ipc";
         bmeconc4: FDDI_SAC; // in Building Mt
-            on:
-                host;
             parameters:
                 StationID = -1,
                 address = "DEC___18DB64";
@@ -143,40 +125,30 @@ module TUBNRing
                 M_out[4];
             display: "p=400,200;i=ipc";
         bmebr2: FDDI_SAS; // in Building F
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 5,
                 address = "DEC___28E6AC";
             display: "p=410,260;i=ipc";
         ethsw1: FDDI_SAS; // in Building MM
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 6,
                 address = "00C01DF447A6";
             display: "p=460,260;i=ipc";
         ethsw2: FDDI_SAS; // in Building MM
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 7,
                 address = "00C01DF44885";
             display: "p=460,220;i=ipc";
         fizika2: FDDI_SAS; // in Building F
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 8,
                 address = "DEC___B48FE4";
             display: "p=460,180;i=ipc";
         bmeconc3: FDDI_SAC; // in Building St
-            on:
-                host;
             parameters:
                 StationID = -1,
                 address = "DEC___26B05D";
@@ -185,16 +157,12 @@ module TUBNRing
                 M_out[1];
             display: "p=360,275;i=ipc";
         bmebr3: FDDI_SAS; // in Building J
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 9,
                 address = "DEC___286606";
             display: "p=360,330;i=ipc";
         bmeconc2: FDDI_SAC; // in Building R, EIK
-            on:
-                host;
             parameters:
                 StationID = -1,
                 address = "DEC___314A73";
@@ -203,31 +171,23 @@ module TUBNRing
                 M_out[3];
             display: "p=240,275;i=ipc";
         Challenge: FDDI_SAS; // in Building R, EIK
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 10,
                 address = "SGI___0409E8";
             display: "p=190,330;i=comp";
         gibr: FDDI_SAS; // in Building D
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 11,
                 address = "DEC___28691D";
             display: "p=240,330;i=comp";
         sniffer: FDDI_Sniffer; // in Building R, EIK
-            on:
-                host;
             parameters:
                 StationID = 100,
                 address = "This_Monitor";
             display: "p=290,330;i=comp";
         bmeconc1: FDDI_SAC; // in Building R, EIK
-            on:
-                host;
             parameters:
                 StationID = -1,
                 address = "DEC___286C41";
@@ -236,24 +196,18 @@ module TUBNRing
                 M_out[3];
             display: "p=100,200;i=ipc";
         Delfin: FDDI_SAS; // in Building R, EIK
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 12,
                 address = "IBM___1DE0BA";
             display: "p=50,240;i=comp";
         Goliat: FDDI_SAS; // in Building R, EIK
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 13,
                 address = "Sun___1BD035";
             display: "p=100,265;i=comp";
         bigmac: FDDI_SAS; // in Building R, EIK
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 14,
@@ -311,8 +265,6 @@ endmodule
 // direction is modelled; all the stations are modelled just with SAS.
 //
 module TUBSRing
-    machines:
-        host;
     parameters:
         LoadControlFile : string,
         FDDI_Generator_type : string,
@@ -324,69 +276,51 @@ module TUBSRing
         out: out;
     submodules:
         loadCtrl: LoadControl;
-            on:
-                host;
             parameters:
                 LoadControlFile = LoadControlFile;
             display: "p=50,50";
         bmecisco7: FDDI_Router_port; // in Building R, EIK
-            on:
-                host;
             parameters:
                 //      FDDI_Generator_type=FDDI_Generator_type,
                 StationID = 0,
                 address = "DECnet000728";
             display: "p=150,50;i=router";
         sniffer: FDDI_Sniffer; // in Building R, EIK
-            on:
-                host;
             parameters:
                 StationID = 100,
                 address = "this_sniffer";
             display: "p=250,50;i=comp";
         bmecisco5: FDDI_SAS; // in Building V2
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 1,
                 address = "DECnet000228";
             display: "p=350,50;i=router";
         wagner: FDDI_SAS; // in Building V2, EET
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 2,
                 address = "Sun___213C25";
             display: "p=400,125;i=comp";
         mhtbridge: FDDI_SAS; // in Building V2, MHT
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 3,
                 address = "Bridge1A3866";
             display: "p=350,200;i=ipc";
         bmecisco4: FDDI_SAS; // in Building St
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 4,
                 address = "DECnet000428";
             display: "p=250,200;i=router";
         heliosz: FDDI_SAS; // in Building R, VSZK
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 5,
                 address = "Sun___739BF9";
             display: "p=150,200;i=comp";
         xyplex: FDDI_SAS; // in Building R, VSZK
-            on:
-                host;
             parameters:
                 FDDI_Generator_type = FDDI_Generator_type,
                 StationID = 6,
